--- a/index.html
+++ b/index.html
@@ -8,69 +8,74 @@
 </head>
 
 <body>
-    <header>
-        <div class="logo-area">
-            <img src="cpp-logo.png" alt="CPP Logo" class="logo">
-            <h1>Computer Science Department</h1>
+    <header class="cpp-header">
+        <div class="header-left">
+            <img src="cpp-logo.png" alt="CPP Logo" class="cpp-logo">
+            <span class="cpp-wordmark">Cal Poly Pomona</span>
         </div>
-
-        <nav class="navbar">
-            <ul class="menu">
-
-                <li><a href="#">Home</a></li>
-
-                <!-- Undergraduate -->
-                <li class="dropdown">
-                    <a href="#">Undergraduate</a>
-                    <ul class="dropdown-menu">
-                        <li><a href="#">Program Overview</a></li>
-                        <li><a href="#">Admission Requirements</a></li>
-                        <li><a href="#">Undergraduate Course Descriptions</a></li>
-                        <li><a href="#">Planned Course Offerings</a></li>
-                        <li><a href="#">Student Resources</a></li>
-                        <li><a href="#">Minor in CS</a></li>
-                        <li><a href="#">Minor in Data Science</a></li>
-                    </ul>
-                </li>
-
-                <!-- Graduate -->
-                <li class="dropdown">
-                    <a href="#">Graduate</a>
-                    <ul class="dropdown-menu">
-                        <li><a href="#">Program Information</a></li>
-                        <li><a href="#">Application Procedures</a></li>
-                        <li><a href="#">Graduate Course Descriptions</a></li>
-                        <li><a href="#">Graduate Resources</a></li>
-                        <li><a href="#">Recent Master's Theses/Projects</a></li>
-                        <li><a href="#">Faculty Research & Interests</a></li>
-                    </ul>
-                </li>
-
-                <!-- Opportunities -->
-                <li class="dropdown">
-                    <a href="#">Opportunities</a>
-                    <ul class="dropdown-menu">
-                        <li><a href="#">Student Labs</a></li>
-                        <li><a href="#">CS Internships</a></li>
-                        <li><a href="#">Scholarships</a></li>
-                        <li><a href="#">Employment Opportunities</a></li>
-                        <li><a href="#">Research Opportunities</a></li>
-                    </ul>
-                </li>
-
-                <!-- Faculty & Staff -->
-                <li class="dropdown">
-                    <a href="#">Faculty & Staff</a>
-                    <ul class="dropdown-menu">
-                        <li><a href="#">Faculty Directory</a></li>
-                        <li><a href="#">Office Hours</a></li>
-                        <li><a href="#">Advising Information</a></li>
-                    </ul>
-                </li>
-
-            </ul>
-        </nav>
+    
+        <div class="header-right">
+            <a href="#">APPLY</a>
+            <a href="#">VISIT</a>
+            <a href="#">INFO</a>
+            <a href="#">GIVE</a>
+            <a href="#">MYCPP</a>
+            <span class="icon">🔍</span>
+            <span class="icon">☰</span>
+        </div>
     </header>
+
+    <nav class="navbar">
+        <ul class="menu">
+
+            <li><a href="#">Home</a></li>
+
+            <li class="dropdown">
+                <a href="#">Undergraduate</a>
+                <ul class="dropdown-menu">
+                    <li><a href="#">Program Overview</a></li>
+                    <li><a href="#">Admission Requirements</a></li>
+                    <li><a href="#">Undergraduate Course Descriptions</a></li>
+                    <li><a href="#">Planned Course Offerings</a></li>
+                    <li><a href="#">Student Resources</a></li>
+                    <li><a href="#">Minor in CS</a></li>
+                    <li><a href="#">Minor in Data Science</a></li>
+                </ul>
+            </li>
+
+            <li class="dropdown">
+                <a href="#">Graduate</a>
+                <ul class="dropdown-menu">
+                    <li><a href="#">Program Information</a></li>
+                    <li><a href="#">Application Procedures</a></li>
+                    <li><a href="#">Graduate Course Descriptions</a></li>
+                    <li><a href="#">Graduate Resources</a></li>
+                    <li><a href="#">Recent Master’s Theses/Projects</a></li>
+                    <li><a href="#">Faculty Research & Interests</a></li>
+                </ul>
+            </li>
+
+            <li class="dropdown">
+                <a href="#">Opportunities</a>
+                <ul class="dropdown-menu">
+                    <li><a href="#">Student Labs</a></li>
+                    <li><a href="#">CS Internships</a></li>
+                    <li><a href="#">Scholarships</a></li>
+                    <li><a href="#">Employment Opportunities</a></li>
+                    <li><a href="#">Research Opportunities</a></li>
+                </ul>
+            </li>
+
+            <li class="dropdown">
+                <a href="#">Faculty & Staff</a>
+                <ul class="dropdown-menu">
+                    <li><a href="#">Faculty Directory</a></li>
+                    <li><a href="#">Office Hours</a></li>
+                    <li><a href="#">Advising Information</a></li>
+                </ul>
+            </li>
+        </ul>
+    </nav>
 
     <section class="hero">
         <h2>Welcome to the CPP Computer Science Department</h2>
