--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
 </head>
 
 <body>
+
     <header class="cpp-header">
         <div class="header-left">
             <img src="cpp-logo.png" alt="CPP Logo" class="cpp-logo">
             <span class="cpp-wordmark">Cal Poly Pomona</span>
         </div>
-    
+
         <div class="header-right">
             <a href="#">APPLY</a>
             <a href="#">VISIT</a>
@@ -25,6 +26,7 @@
         </div>
     </header>
 
+    
     <nav class="navbar">
         <ul class="menu">
 
@@ -35,7 +37,7 @@
                 <ul class="dropdown-menu">
                     <li><a href="#">Program Overview</a></li>
                     <li><a href="#">Admission Requirements</a></li>
-                    <li><a href="#">Undergraduate Course Descriptions</a></li>
+                    <li><a href="#">Course Descriptions</a></li>
                     <li><a href="#">Planned Course Offerings</a></li>
                     <li><a href="#">Student Resources</a></li>
                     <li><a href="#">Minor in CS</a></li>
@@ -50,7 +52,7 @@
                     <li><a href="#">Application Procedures</a></li>
                     <li><a href="#">Graduate Course Descriptions</a></li>
                     <li><a href="#">Graduate Resources</a></li>
-                    <li><a href="#">Recent Master’s Theses/Projects</a></li>
+                    <li><a href="#">Recent Master’s Projects</a></li>
                     <li><a href="#">Faculty Research & Interests</a></li>
                 </ul>
             </li>
@@ -59,7 +61,7 @@
                 <a href="#">Opportunities</a>
                 <ul class="dropdown-menu">
                     <li><a href="#">Student Labs</a></li>
-                    <li><a href="#">CS Internships</a></li>
+                    <li><a href="#">Internships</a></li>
                     <li><a href="#">Scholarships</a></li>
                     <li><a href="#">Employment Opportunities</a></li>
                     <li><a href="#">Research Opportunities</a></li>
@@ -74,13 +76,108 @@
                     <li><a href="#">Advising Information</a></li>
                 </ul>
             </li>
+
         </ul>
     </nav>
 
-    <section class="hero">
-        <h2>Welcome to the CPP Computer Science Department</h2>
+   
+<section class="hero-image">
+    <div class="hero-overlay">
+        <h1>Welcome to the CPP Computer Science Department</h1>
         <p>Empowering students through innovation, research, and industry-focused curriculum.</p>
-    </section>
+    </div>
+</section>
 
+
+<section class="welcome-modern">
+    <h2>Welcome!</h2>
+    <p>
+        The Computer Science Department at Cal Poly Pomona offers both undergraduate
+        and graduate programs with a strong emphasis on hands-on software design,
+        applied computing, and real-world problem solving.
+    </p>
+    <p>
+        Students build a strong foundation in algorithms, programming languages,
+        architecture, and systems, while also exploring advanced areas like
+        cybersecurity, cloud computing, data science, artificial intelligence,
+        mobile and web development, and game programming.
+    </p>
+    <p>
+        Our graduates are prepared for careers in software engineering, research,
+        data analytics, and advanced study in computing disciplines.
+    </p>
+</section>
+
+
+<section class="programs-section">
+    <h2 class="section-title">Programs</h2>
+
+    <div class="programs-grid">
+
+        <div class="program-card">
+            <img src="your-banner.jpg" alt="Undergraduate Program">
+            <h3>Undergraduate</h3>
+            <p>Explore our Bachelor of Science curriculum, concentrations, and student opportunities.</p>
+        </div>
+
+        <div class="program-card">
+            <img src="your-banner.jpg" alt="Graduate Program">
+            <h3>Graduate</h3>
+            <p>Learn about our Master of Science program, research areas, and graduate resources.</p>
+        </div>
+
+    </div>
+</section>
+
+
+<section class="news-section">
+    <h2 class="section-title white-title">What's New</h2>
+
+    <div class="news-card">
+        <p>
+            The CS department invites applications for two tenure-track faculty positions 
+            at the Assistant Professor rank, starting Fall 2024.
+        </p>
+        <a href="#">Read more →</a>
+    </div>
+
+    <div class="news-card">
+        <p>
+            Check out our digital CS brochure and learn about upcoming programs and certificates.
+        </p>
+        <a href="#">Download PDF →</a>
+    </div>
+
+    <div class="news-card">
+        <p>
+            Interested in the state of the art in Computer Science? Attend our CS Seminar Series.
+        </p>
+        <a href="#">Learn more →</a>
+    </div>
+</section>
+
+
+<section class="contact-section">
+    <h2 class="section-title">Contact Information</h2>
+
+    <div class="contact-card">
+        <p>📍 Building 3 - Room 1645</p>
+        <p>✉️ cs@cpp.edu</p>
+        <p>📞 909.869.3440</p>
+        <p>📠 909.869.4733</p>
+    </div>
+</section>
+
+
+<section class="social-section">
+    <h2 class="section-title">Follow Us</h2>
+
+    <div class="social-icons">
+        <span>🐦</span>
+        <span>📸</span>
+        <span>📘</span>
+        <span>💼</span>
+    </div>
+</section>
 </body>
 </html>
