--- a/minor_data_science.html
+++ b/minor_data_science.html
@@ -37,7 +37,7 @@
                     <li><a href="program_overview.html">Program Overview</a></li>
                     <li><a href="course_description.html">Course Descriptions</a></li>
                     <li><a href="offerings.html">Planned Course Offerings</a></li>
-                    <li><a href="student_resoruces.hml">Student Resources</a></li>
+                    <li><a href="student_resources.html">Student Resources</a></li>
                     <li><a href="minor_in_CS.html">Minor in CS</a></li>
                     <li><a href="minor_data_science.html">Minor in Data Science</a></li>
                 </ul>
