--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@
 </head>
 
 <body>
-
-    <!-- ===== CPP TOP HEADER (WORDMARK + UTILITY LINKS) ===== -->
 <!-- ===================== TOP CPP HEADER ===================== -->
 <header class="cpp-topbar">
     <div class="cpp-left">
@@ -27,49 +25,51 @@
         <span class="icon">☰</span>
     </div>
 </header>
-
-<!-- ===================== SECOND NAV ROW ===================== -->
 <nav class="cpp-nav">
     <ul class="menu">
 
         <li><a href="index.html">Home</a></li>
-
         <!-- STUDENT FACILITIES / OPPORTUNITIES -->
-        <li class="dropdown">
-            <a href="#">Student Facilities/Opportunities ▼</a>
-            <ul class="dropdown-menu">
+<li class="dropdown">
+    <a href="#">Student Facilities/Opportunities ▼</a>
 
-                <li class="dropdown-sub">
-                    <a href="#">Student Labs ▶</a>
-                    <ul class="dropdown-submenu">
-                        <li><a href="#">Instructional Labs</a></li>
-                        <li><a href="#">Research Labs</a></li>
-                    </ul>
-                </li>
-
-                <li class="dropdown-sub">
-                    <a href="#">CS Internship </a>
-                </li>
-
-                <li class="dropdown-sub">
-                    <a href="#">Student Opportunities ▶</a>
-                    <ul class="dropdown-submenu">
-                        <li><a href="#">Employment Opportunities</a></li>
-                        <li><a href="#">Research Opportunities</a></li>
-                        <li><a href="#">Scholarship Opportunities</a></li>
-                    </ul>
-                </li>
-
+    <ul class="dropdown-menu">
+        <li class="dropdown-sub">
+            <a href="#">Student Labs ▼</a>
+            <ul class="dropdown-submenu">
+                <li><a href="#">Instructional Labs</a></li>
+                <li><a href="#">Research Labs</a></li>
+                <li><a href="#">Lab Use and Hours</a></li>
             </ul>
         </li>
 
+        <li><a href="#">CS Internship</a></li>
+
+        <!-- STUDENT OPPORTUNITIES -->
+        <li class="dropdown-sub">
+            <a href="#">Student Opportunities ▼</a>
+            <ul class="dropdown-submenu">
+                <li><a href="#">Employment Opportunities</a></li>
+                <li><a href="#">Research Opportunities</a></li>
+                <li><a href="#">Scholarship Opportunities</a></li>
+            </ul>
+        </li>
+
+        <!-- CLUBS -->
+        <li><a href="#">CS Student Clubs</a></li>
+
+        <!-- ADVISING CENTER -->
+        <li><a href="#">College of Science Advising Center</a></li>
+
+    </ul>
+</li>
         <!-- UNDERGRADUATE -->
-        <li class="dropdown">
+<li class="dropdown">
     <a href="#">Undergraduate ▼</a>
 
     <ul class="dropdown-menu">
+        <li><a href="program_overview.html">Program Overview</a></li>
 
-        <!-- COURSE CATALOG -->
         <li class="dropdown-sub">
             <a href="#">Course Catalog ▶</a>
             <ul class="dropdown-submenu">
@@ -79,13 +79,10 @@
             </ul>
         </li>
 
-        <!-- UNDERGRADUATE PROGRAMS -->
         <li><a href="#">Undergraduate Programs</a></li>
 
-        <!-- STUDENT RESOURCES -->
         <li><a href="student_resources.html">Student Resources</a></li>
 
-        <!-- MINORS -->
         <li class="dropdown-sub">
             <a href="#">Minors ▶</a>
             <ul class="dropdown-submenu">
@@ -98,12 +95,16 @@
 </li>
 
 
-        <!-- GRADUATE -->
+
+=
+<!-- GRADUATE -->
 <li class="dropdown">
     <a href="#">Graduate ▼</a>
+
     <ul class="dropdown-menu">
 
-        <!-- Application -->
+        <li><a href="grad_program_overview.html">Program Overview</a></li>
+
         <li class="dropdown-sub">
             <a href="#">Application ▶</a>
             <ul class="dropdown-submenu">
@@ -112,10 +113,9 @@
             </ul>
         </li>
 
-        <!-- Graduate Resources -->
         <li><a href="#">Graduate Resources</a></li>
 
-        <!-- Course Catalog -->
+
         <li class="dropdown-sub">
             <a href="#">Course Catalog ▶</a>
             <ul class="dropdown-submenu">
@@ -124,13 +124,25 @@
             </ul>
         </li>
 
-        <!-- Recent Masters/Theses -->
         <li class="dropdown-sub">
             <a href="#">Recent Masters/Theses ▶</a>
             <ul class="dropdown-submenu">
                 <li><a href="#">Course Descriptions</a></li>
             </ul>
         </li>
+
+    </ul>
+</li>
+
+<li class="dropdown">
+    <a href="#">Program Evaluation ▼</a>
+    <ul class="dropdown-menu">
+
+        <li><a href="#">Program Overview</a></li>
+
+        <li><a href="#">Program Accreditation & Assessment</a></li>
+
+        <li><a href="#">Assessment Reports</a></li>
 
     </ul>
 </li>
