--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
         <li class="dropdown-sub">
             <a href="#">Minors ▶</a>
             <ul class="dropdown-submenu">
-                <li><a href="#">Minor in CS</a></li>
-                <li><a href="#">Minor in Data Science</a></li>
+                <li><a href="minor_in_CS.html">Minor in CS</a></li>
+                <li><a href="minor_data_science.html">Minor in Data Science</a></li>
             </ul>
         </li>
 
